# libclamav-py

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/worflows/: test.yaml
.github/workflows/: lint.yaml  release-please.yaml  release.yaml  test.yaml
etc/: clamd.conf  freshclam.conf  no_virus.txt
libclamav_py/: clamav.py
libclamav_py/config/: base.py  database.py  engine.py  scan.py
libclamav_py/utils/: constant.py
scripts/: post_create.sh
tests/: conftest.py  test_client.py  test_config_base.py  test_config_database.py
