[tool.poetry]
name = "libclamav-py"
version = "0.1.2"
description = "libclamav-py is a Python library that provides a seamless interface to the ClamAV antivirus engine via libClamAV. This wrapper directly calls the C API of Libclamav"
authors = ["tkasuz <63289889+tkasuz@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/tkasuz/libclamav-py"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
